# qsar-platform

./: .gitignore  Dockerfile  README.md  dvc.yaml  mlflow.db  params.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml  train.yml
configs/ensemble/: weighted_avg.yaml
configs/models/: desc_lgbm.yaml  ecfp_xgb.yaml  hf_embed_xgb.yaml
configs/splits/: scaffold.yaml
src/qsar_platform/: cli.py
src/qsar_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qsar_platform/contracts/: schemas.py
src/qsar_platform/ensemble/: weighted_avg.py
src/qsar_platform/features/: descriptors.py  ecfp.py
src/qsar_platform/models/: base.py  desc_lgbm.py  ecfp_xgb.py
src/qsar_platform/serving/: api.py  inference.py
src/qsar_platform/training/: train_descriptors.py  train_ecfp.py
src/qsar_platform/utils/: mlflow_utils.py
tests/unit/: test_api_smoke.py
